Add SD Card Data logging

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:lora32-echo]
-platform = espressif32
+platform = espressif32@6.4.0
 board = ttgo-lora32-v2
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	sandeepmistry/LoRa@^0.8.0
-	adafruit/Adafruit SSD1306@^2.5.9
+	;sandeepmistry/LoRa@^0.8.0
+	;adafruit/Adafruit SSD1306@^2.5.9
